--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "zo-taro-ui",
   "version": "1.0.0",
-  "private": true,
   "description": "zo-taro-ui",
   "main": "dist/index.js",
   "main:h5": "dist/h5/index.js",
@@ -43,12 +42,13 @@
     "@tarojs/taro-h5": "1.3.19",
     "@tarojs/taro-qq": "1.3.19",
     "@tarojs/taro-quickapp": "1.3.19",
+    "@tarojs/taro-rn": "1.3.19",
     "@tarojs/taro-swan": "1.3.19",
     "@tarojs/taro-tt": "1.3.19",
     "@tarojs/taro-weapp": "1.3.19",
-    "@tarojs/taro-rn": "1.3.19",
-    "nervjs": "^1.5.5",
     "nerv-devtools": "^1.5.5",
+    "nervjs": "^1.5.5",
+    "prop-types": "^15.7.2",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
