--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "preserveConstEnums": true,
     "moduleResolution": "node",
     "experimentalDecorators": true,
+    "jsxFactory": "Taro.createElement",
     "noImplicitAny": false,
     "allowSyntheticDefaultImports": true,
     "outDir": "lib",
@@ -16,16 +17,15 @@
     "baseUrl": ".",
     "rootDir": ".",
     "jsx": "preserve",
-    "jsxFactory": "Taro.createElement",
-    "allowJs": true,
-    "resolveJsonModule": true,
     "typeRoots": [
-      "node_modules/@types"
-    ]
+      "node_modules/@types",
+      "global.d.ts",
+      "types"
+    ],
+    "resolveJsonModule": true,
+    "paths": {
+      "zo-taro-ui": [ "src/ui.ts" ]
+    }
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
   "compileOnSave": false
 }
