--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zo-taro-ui",
-  "version": "1.1.5",
+  "version": "1.1.4",
   "description": "zo-taro-ui",
   "main": "dist/index.js",
   "main:h5": "dist/h5/index.js",
@@ -31,34 +31,46 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "1.3.19",
-    "@tarojs/components": "1.3.19",
-    "@tarojs/components-qa": "1.3.19",
-    "@tarojs/redux": "1.3.19",
-    "@tarojs/redux-h5": "1.3.19",
-    "@tarojs/router": "1.3.19",
-    "@tarojs/taro": "1.3.19",
-    "@tarojs/taro-alipay": "1.3.19",
-    "@tarojs/taro-h5": "1.3.19",
-    "@tarojs/taro-qq": "1.3.19",
-    "@tarojs/taro-quickapp": "1.3.19",
-    "@tarojs/taro-rn": "1.3.19",
-    "@tarojs/taro-swan": "1.3.19",
-    "@tarojs/taro-tt": "1.3.19",
-    "@tarojs/taro-weapp": "1.3.19",
+    "@types/react": "^16.7.3",
+    "bind-decorator": "^1.0.11",
+    "classnames": "^2.2.6",
+    "dayjs": "^1.7.7",
+    "lodash": "^4.17.10",
+    "prop-types": "^15.6.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.0-rc.1",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.55",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-react-jsx": "^7.0.0-beta.55",
+    "@babel/preset-env": "^7.0.0-beta.55",
+    "@tarojs/cli": "^1.3.39",
+    "@tarojs/async-await": "1.3.39",
+    "@tarojs/components": "1.3.39",
+    "@tarojs/components-qa": "1.3.39",
+    "@tarojs/redux": "1.3.39",
+    "@tarojs/redux-h5": "1.3.39",
+    "@tarojs/router": "1.3.39",
+    "@tarojs/taro": "1.3.39",
+    "@tarojs/taro-alipay": "1.3.39",
+    "@tarojs/taro-h5": "1.3.39",
+    "@tarojs/taro-qq": "1.3.39",
+    "@tarojs/taro-quickapp": "1.3.39",
+    "@tarojs/taro-rn": "1.3.39",
+    "@tarojs/taro-swan": "1.3.39",
+    "@tarojs/taro-tt": "1.3.39",
+    "@tarojs/taro-weapp": "1.3.39",
     "nerv-devtools": "^1.5.5",
     "nervjs": "^1.5.5",
     "prop-types": "^15.7.2",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
-  },
-  "devDependencies": {
-    "@tarojs/plugin-babel": "1.3.19",
-    "@tarojs/plugin-csso": "1.3.19",
-    "@tarojs/plugin-sass": "1.3.19",
-    "@tarojs/plugin-uglifyjs": "1.3.19",
-    "@tarojs/webpack-runner": "1.3.19",
+    "redux-thunk": "^2.3.0",
+    "@tarojs/plugin-babel": "1.3.39",
+    "@tarojs/plugin-csso": "1.3.39",
+    "@tarojs/plugin-sass": "1.3.39",
+    "@tarojs/plugin-uglifyjs": "1.3.39",
+    "@tarojs/webpack-runner": "1.3.39",
     "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
@@ -71,14 +83,14 @@
     "babel-preset-env": "^1.6.1",
     "cross-env": "^7.0.2",
     "eslint": "^5.16.0",
-    "eslint-config-taro": "1.3.19",
+    "eslint-config-taro": "1.3.39",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "eslint-plugin-taro": "1.3.19",
+    "eslint-plugin-taro": "1.3.39",
     "stylelint": "9.3.0",
-    "stylelint-config-taro-rn": "1.3.19",
-    "stylelint-taro-rn": "1.3.19",
+    "stylelint-config-taro-rn": "1.3.39",
+    "stylelint-taro-rn": "1.3.39",
     "typescript": "^3.0.1"
   }
 }
