--- a/.eslintrc
+++ b/.eslintrc
@@ -1,28 +1,8 @@
 {
-  "extends": ["taro", "plugin:@typescript-eslint/recommended"],
-  "parser": "@typescript-eslint/parser",
+  "extends": ["taro"],
   "rules": {
     "no-unused-vars": ["error", { "varsIgnorePattern": "Taro" }],
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
-    "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "Taro" }],
-    "@typescript-eslint/member-delimiter-style": {
-      "multiline": {
-        "delimiter": "none",
-        "requireLast": false
-      },
-      "singleline": {
-        "delimiter": "none",
-        "requireLast": false
-      }
-    },
-    "@typescript-eslint/explicit-function-return-type": 0,
-    "@typescript-eslint/no-empty-function": ["warn"]
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }]
   },
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "useJSXTextNode": true,
-    "project": "./tsconfig.json"
+  "parser": "babel-eslint"
   }
-}
