--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "",
   "templateInfo": {
-    "name": "default",
+    "name": "redux",
     "typescript": true,
     "css": "sass"
   },
@@ -32,6 +32,8 @@
   "dependencies": {
     "@tarojs/components": "2.2.4",
     "@tarojs/components-qa": "2.2.4",
+    "@tarojs/redux": "2.2.4",
+    "@tarojs/redux-h5": "2.2.4",
     "@tarojs/router": "2.2.4",
     "@tarojs/taro": "2.2.4",
     "@tarojs/taro-alipay": "2.2.4",
@@ -41,16 +43,18 @@
     "@tarojs/taro-swan": "2.2.4",
     "@tarojs/taro-tt": "2.2.4",
     "@tarojs/taro-weapp": "2.2.4",
-    "@tarojs/taro-rn": "2.2.4",
     "babel-runtime": "^6.26.0",
-    "regenerator-runtime": "0.11.1",
     "nervjs": "^1.5.5",
-    "nerv-devtools": "^1.5.5"
+    "nerv-devtools": "^1.5.5",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "0.11.1"
   },
   "devDependencies": {
     "@tarojs/mini-runner": "2.2.4",
     "@tarojs/webpack-runner": "2.2.4",
-    "@types/react": "^16.4.6",
+    "@types/react": "^16.4.8",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
