--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "app",
+  "name": "zo-taro-ui",
   "version": "1.1.16",
-  "description": "",
+  "description": "zo-taro-ui",
+  "main": "dist/index.js",
+  "main:h5": "dist/h5/index.js",
   "templateInfo": {
     "name": "redux",
     "typescript": true,
