--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "zo-taro-ui",
-  "version": "1.1.19",
-  "description": "zo-taro-ui",
+  "name": "@01js/taro-ui",
+  "version": "1.0.0",
+  "description": "@01js/taro-ui",
   "main": "dist/index.js",
   "main:h5": "dist/h5/index.js",
   "templateInfo": {
