--- a/.eslintrc
+++ b/.eslintrc
@@ -5,16 +5,16 @@
     "no-unused-vars": ["error", { "varsIgnorePattern": "Taro" }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
     "@typescript-eslint/no-unused-vars": ["error", { "varsIgnorePattern": "Taro" }],
-    "@typescript-eslint/member-delimiter-style": ["error", {
+    "@typescript-eslint/member-delimiter-style": {
       "multiline": {
         "delimiter": "none",
         "requireLast": false
       },
       "singleline": {
-        "delimiter": "semi",
+        "delimiter": "none",
         "requireLast": false
       }
-    }],
+    },
     "@typescript-eslint/explicit-function-return-type": 0,
     "@typescript-eslint/no-empty-function": ["warn"]
   },
